--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,9 @@
 h2 {
   font-size: medium;
   font-weight: 200;
+  
 }
+
 /* END SETUP */
 
 /* Classes that you might find useful */
@@ -32,6 +34,7 @@ h2 {
 }
 
 .threevert {
+  height: 33.3%;
 }
 
 .threehoriz {
@@ -63,6 +66,15 @@ h2 {
   background-color: orange;
 }
 
+.red {
+  background-color: red;
+}
+
+#white {
+  background-color: white;
+}
+
+
 .yellow {
   background-color: yellow;
 }
@@ -75,7 +87,7 @@ h2 {
   background-color: blue;
 }
 
-.lightblue {
+.light-blue {
   background-color: lightblue;
 }
 
@@ -95,14 +107,20 @@ h2 {
 
 .thailand-red {
   /* TODO */
+  background-color: #B5002D;
+  height: 17.5%;
 }
 
 .thailand-white {
   /* TODO */
+  background-color: #fff;
+  height: 17.5%;
 }
 
 .thailand-blue {
   /* TODO */
+  background-color: #2E2A4C;
+  height:30%;
 }
 
 /* END QUESTION 2 */
@@ -111,14 +129,19 @@ h2 {
 
 .romania-blue {
   background-color: #002c84;
+  width: 33.3%;
+  
 }
 
 .romania-yellow {
   background-color: #ffcf00;
+  width: 33.3%;
 }
+
 
 .romania-red {
   background-color: #e10017;
+  width: 33.3%;
 }
 
 /* END QUESTION 3 */
@@ -126,14 +149,24 @@ h2 {
 /* QUESTION 4 */
 .mexico-green {
   background-color: #006341;
+  width:33.3%;
 }
 
-.mexico-img {
-  /* TODO */
+
+img {
+  width: 33.3%;
+  background-color: white;
+  max-height: 120px;
+  /* max-width: 100px; */
+  align-self:center;
 }
+
+
 
 .mexico-red {
   background-color: #ce1126;
+  width:33.3%;
+  
 }
 
 /* QUESTION 6 */
@@ -149,12 +182,23 @@ h2 {
 /* For margin practice */
 .flag1 {
   background-color: red;
+  /* margin-right: 5px; */
   /* TODO */
+  height: 300px;
+  width: 500px;
+  border-style: solid;
+  margin-right: 5px;
+  /* padding-inline-start: 60px; */
 }
 
 .flag2 {
   background-color: blue;
   /* TODO */
+  /* margin-left: 5px; */
+  height: 300px;
+  width: 500px;
+  border-style: solid;
+  margin-left: 5px;
 }
 /* For padding practice */
 .padding-container {
@@ -162,4 +206,14 @@ h2 {
   background-color: lightblue;
   background-clip: content-box, padding-box;
   /* TODO */
+
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.label:hover{
+  font-size: large;
+  color: red;
 }
